# simple-secrets

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bootstrap-etcd.sh  docker-compose.yml  register-spire-agents.sh  register-spire-policy.sh  simple-secrets.postman_collection.json
conf/: spire-agent.conf
fluentd-proxy/: envoy.yaml
prometheus/: alertmanager.yml  prometheus.yml
prometheus-proxy/: Dockerfile  envoy.yaml
proxy/: Dockerfile
server/: Cargo.toml  Dockerfile  envoy.yaml  start_envoy.sh
server/src/: main.rs
spire/: Dockerfile  helper.conf  register_nodes.sh
spire/conf/: server.conf
src/: main.rs
